# coro_eyes_sdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: CMakeLists.txt  Doxyfile
examples/: CMakeLists.txt  camera_calibration_example.cpp  camera_example.cpp  point_cloud_example.cpp  pose_estimation_example.cpp  projector_example.cpp  structured_light_example.cpp
include/: CoRo_Eyes_SDK.h  coro_eyes_sdk.h
include/camera/: camera.h  camera_calibration.h
include/point_cloud/: point_cloud.h
include/projector/: projector.h  structured_light_patterns.h
include/projector/common/: module.hpp  other.hpp
include/projector/dlp/common/: debug.hpp  module.hpp  parameters.hpp  returncode.hpp
include/projector/dlp/common/image/: image.hpp
include/projector/dlp/common/pattern/: pattern.hpp
include/projector/dlp/dlp_platforms/: dlp_platform.hpp
include/projector/dlp/dlp_platforms/lightcrafter_4500/: dlpc350_api.hpp  dlpc350_firmware.hpp  error.hpp  lcr4500.hpp
include/projector/dlp_platforms/common/: other.hpp  parameters.hpp  pixel_array_configuration.hpp  returncode.hpp
include/projector/dlp_platforms/common/image/: image.hpp
include/projector/dlp_platforms/common/pattern/: pattern.hpp
include/projector/dlp_platforms/lightcrafter_4500/: common.hpp  dlpc350_usb.hpp  flashdevice.hpp
include/structured_light/: structured_light.h
install/: configure_udev_rule.sh
resources/calibration/: camera_calibration_settings.xml
resources/calibration/data/: camera_19153384.xml  camera_19305617.xml  pose_estimation_19153384.xml  pose_estimation_19305617.xml  stereo_19153384_19305617.xml
resources/dlp_platforms/: projector_settings.txt
src/: CMakeLists.txt  CoRo_Eyes_SDKConfig.cmake.in  cmake_uninstall.cmake.in  coro_eyes_sdkConfig.cmake.in  coro_eyes_sdkConfig.h.in
src/camera/: CMakeLists.txt  camera.cpp  camera_calibration.cpp
src/point_cloud/: CMakeLists.txt  point_cloud.cpp
src/projector/: CMakeLists.txt  structured_light_patterns.cpp
src/projector/common/: debug.cpp  other.cpp  parameters.cpp  returncode.cpp
src/projector/common/pattern/: pattern.cpp
src/projector/dlp/common/: debug.cpp  module.cpp  other.cpp  parameters.cpp  returncode.cpp
src/projector/dlp/common/image/: image.cpp
src/projector/dlp/common/pattern/: pattern.cpp  pattern_sequence.cpp
src/projector/dlp/dlp_platforms/: dlp_platform.cpp
src/projector/dlp/dlp_platforms/lightcrafter_4500/: common.cpp  dlpc350_api.cpp  dlpc350_firmware.cpp  dlpc350_usb.cpp  lcr4500.cpp
src/projector/dlp/dlp_platforms/lightcrafter_4500/Flash/: FlashDeviceParameters.txt
src/projector/dlp_platforms/: dlp_platform.cpp
src/projector/dlp_platforms/lightcrafter_4500/: common.cpp  dlpc350_api.cpp  dlpc350_firmware.cpp  lcr4500.cpp
src/structured_light/: CMakeLists.txt  structured_light.cpp
